--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,10 +7,9 @@
 <body>
 <div>
   <div class='center'>
-    <div class='title'>Classify Bear Images 🐻</div>
+    <div class='title'>Street Image Object Segmentation</div>
     <p>
-      Use images of <strong>teddy</strong> bears, <strong>black</strong> bears, <strong>grizzly</strong> bears, or
-      all three!
+      Trained just using 10% data. 50% accurate. Uplocad any street image with objects like humans, road, traffic lights etc.
     </p>
     <div class='content'>
       <div class='no-display'>
